# tp-lab-4

./: CMakeLists.txt
include/: zsdfhjzxncn.h
src/: Automata.cpp  main.cpp  main1.cpp
test/: tests.cpp
